# cmake

./: CMakeLists.txt  CMakeLists.txt.bak
cmake2/: CMakeLists.txt
cmake2/lib/: CMakeLists.txt  hello.cpp  hello.h
cmake3/: CMakeLists.txt
cmake3/src/: CMakeLists.txt  main.cpp
